replacing deprecated URL construction